{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "onFoot",
            "id": "0cd91ea8-7dee-4cb3-a9d4-1535b0131ba9",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "63b74b90-edf2-4cbc-996a-492b5a3a4dba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Mouse Look",
                    "type": "Value",
                    "id": "75452d1a-58ad-4671-add5-68af65c0a187",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "37299645-d8ed-4aba-aadc-dc9c2733c031",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "3c28f226-64b6-4096-861f-75f5811fccd6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ac771035-bc6e-449d-938d-73ff10fcde73",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2eb84497-43a4-42cd-890b-8ba6add2fecc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9a4328d1-6766-4756-a214-8d3fa1997913",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a7baba78-700d-48cd-8d1c-b09b62ce4c3b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1614e185-aa50-464e-a6ad-cfbad24b5402",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bb312f0-385e-4817-aead-d673193853db",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "extra",
            "id": "727175a9-6383-4a21-bcc7-c20acf8a48f6",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "b6d18e09-478a-499b-a843-fb0ec3780046",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Scoreboard",
                    "type": "Button",
                    "id": "73667a5a-ad39-417b-bd99-fe14d8595588",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "34c073ec-81d6-4d54-8c11-2162c243d9bc",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d2fc387-3e0f-44a7-bce9-996d80491810",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scoreboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "weaponHandling",
            "id": "dd7a0643-4172-431c-9391-fff015497e89",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "a8760c0f-47be-40cf-a8c5-cb1ca6873b91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "1faa4653-f901-4d41-8c5c-0d64680e81f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "39253a06-8977-4dc2-9e8f-016a40d651bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Weapon1",
                    "type": "Button",
                    "id": "336e530d-418e-4872-b120-b8253737a424",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Weapon2",
                    "type": "Button",
                    "id": "14351e7c-3450-43df-b875-12971a32f2e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Weapon3",
                    "type": "Button",
                    "id": "db896471-8e3f-4f34-b6eb-a89956a46bfc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Weapon4",
                    "type": "Button",
                    "id": "62ef9b25-df8a-4095-b3a2-86cd42b17f0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "42642ab2-780a-43dc-90ef-5b40642f21b7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5603201-def4-48a8-83c0-20fac55dd307",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55afe457-9e25-4fd6-9d6a-4e707ab3e714",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Weapon1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a986a714-06c6-4827-9abb-2ac2b5bd619a",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Weapon2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60d4cd57-2cd2-47db-bfe9-116acdb35790",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Weapon3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6d08d2f-d579-4574-96bc-af82bd8ade10",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Weapon4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0b850f0-b068-4e00-bfe1-2ef1f4a7f175",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}